cmake_minimum_required(VERSION 3.16)
project(Cpp-STL)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_subdirectory(Cpp-STL-01-template)
add_subdirectory(Cpp-STL-02-array)
add_subdirectory(Cpp-STL-03-vector)
add_subdirectory(Cpp-STL-04-list)
add_subdirectory(Cpp-STL-05-forwardlist)
add_subdirectory(Cpp-STL-06-deque)
add_subdirectory(Cpp-STL-07-set)
add_subdirectory(Cpp-STL-08-multiset)
add_subdirectory(Cpp-STL-09-map)
add_subdirectory(Cpp-STL-10-multimap)
add_subdirectory(Cpp-STL-11-stack)
add_subdirectory(Cpp-STL-12-queue) 
add_subdirectory(Cpp-STL-13-priorityqueue)
add_subdirectory(Cpp-STL-14-function)
add_subdirectory(Cpp-STL-15-iterator)
#add_subdirectory(Cpp-STL-16-)
